fix icon font spacing when next to text

--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -289,7 +289,7 @@ input[type="checkbox"] {
   &:after {
     @extend .icon;
     position: absolute;
-    right: $font-size-lg / 2;
+    right: $half-spacer;
     top: $font-size-lg / 2;
     font-size: $font-size-lg;
   }
